# BuildClone

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/game/: player.hpp
src/map/: map.hpp
src/render/: render.cpp  render.hpp
